--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -4,8 +4,9 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background-image: url('../images/background_JuhoPuurunen.png');
+  background-image: url('../../static/background_JuhoPuurunen.png');
   background-repeat: no-repeat;
+  background-position: right top;
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
@@ -21,6 +22,12 @@ header {
   color: aliceblue;
   text-shadow: 3px 3px #2f4f4f ;
   letter-spacing: 3px;
+}
+
+.dummyLogo {
+  height: 40px;
+  width: 40px;
+  margin: 5px;
 }
 
 .sideDiv {
@@ -90,7 +97,10 @@ header {
 
 .logo {
   height: 50px;
-  margin: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   float: right;
 }
 
@@ -208,13 +218,99 @@ a:hover {
     position: absolute;
     left: 100px;
     bottom: 10px;
+    width: 80px;
     display: flex;
     flex-direction: column-reverse;
   }
 
   .logo {
     height: 50px;
-    margin: 10px;
+    margin-bottom: 10px;
+    margin-right: 5px;
   }
 
+}
+
+
+@media only screen and (max-width: 420px) { 
+  body {
+    background-position: left top;
+  }
+
+  a {
+    width: auto;
+    height: auto;
+  }
+
+  .header {
+    height: 50px;
+    top: 10px;
+  }
+
+  .title {
+    margin: 0px;
+    font-size: 1em;
+  }
+
+  .profile {
+    width: 90vw;
+    top: 70px;
+    left: 20px;
+  }
+
+  .about {
+    margin: 0px;
+    font-size: 1em;
+  }
+
+  .sideDiv {
+    margin: 0px;
+    left: 10px;
+  }
+
+  .text {
+    font-size: .8em;
+  }
+
+  .GithubLogo {
+    width: 70px;
+  }
+
+  .LinkedinLogo {
+    width: 70px;
+  }
+
+  .codeLogo {
+    width: 40px;
+    height: 40px;
+    margin: 0px;
+  }
+  
+  .logo {
+    height: 30px;
+    margin-bottom: 2px;
+    margin-left: 4px;
+    float: right;
+  }
+
+  .codes {
+    width: 40px;
+    height: 40px;
+  }
+
+  .adobes {
+    width: 50px;
+    height: 50px;
+  }
+  .CreativeCloudLogo {
+    width: 50px;
+    height: 40px;
+    margin: 0px;
+  }
+  .adobelogo {
+    height: 30px;
+    width: 30px;
+    margin-bottom: 10px;
+    float: right;
+  }
 }
